# dnslogger-forward

./: Makefile.in  README  configure.ac
debian/: README.Debian  changelog  conffiles  control  copyright  dnslogger-forward-default  init.d  rules
doc/: dnslogger-forward.8
etc/: autogen.sh  build.sh
src/: ansidecl.h  capture.c  capture.h  dns.c  dns.h  forward.c  forward.h  ipv4.c  ipv4.h  log.c  log.h  main.c  test.c  test.h
testsuite/: generate.pl
